--- a/Linux/tmux.conf
+++ b/Linux/tmux.conf
@@ -51,3 +51,10 @@ bind-key -r S-Left resize-pane -L 3
 
 set -g default-terminal "screen-256color"
 set-option -g default-command bash
+
+# Plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Run Tmux Plugin Manager
+run '~/.tmux/plugins/tpm/tpm'
+
