--- a/tmux.conf
+++ b/tmux.conf
@@ -4,19 +4,15 @@ set -g mouse off
 set-option -g history-limit 10000
 
 # default statusbar colors
-set-option -g status-bg colour236 #base02
 #set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+set-option -g status-style "fg=yellow,bg=colour236" #base02 #yellow
 
 # default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
+set-window-option -g window-status-style "fg=brightblue,bg=default" #base0
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-style "fg=brightred,bg=default" #orange
 #set-window-option -g window-status-current-attr bright
 
 # pane border
@@ -30,8 +26,7 @@ set-option -g window-active-style "fg=colour255,bg=colour0"  #linux
 #set-option -g window-active-style "fg=colour255,bg=black"  #windows
 
 # message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set-option -g message-style "fg=brightred,bg=black" #base02 #orange
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
