--- a/tmux.conf
+++ b/tmux.conf
@@ -81,6 +81,7 @@ set -g focus-events
 
 # Install tpm
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
