Remove tmux default command to properly load .bash_profile/.bashrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,7 +73,7 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 set -g default-terminal "screen-256color"
-set-option -g default-command bash
+#set-option -g default-command bash
 
 # For vim-gitgutter
 set -g focus-events
