--- a/tmux.conf
+++ b/tmux.conf
@@ -9,18 +9,16 @@ set-option -g status-style "fg=yellow,bg=colour236" #base02 #yellow
 
 # default window title colors
 set-window-option -g window-status-style "fg=brightblue,bg=default" #base0
-#set-window-option -g window-status-attr dim
 
 # active window title colors
 set-window-option -g window-status-current-style "fg=brightred,bg=default" #orange
-#set-window-option -g window-status-current-attr bright
 
 # pane border
 set-option -g pane-border-style "fg=brightgreen,bg=colour232" #base02
 set-option -g pane-active-border-style "fg=brightgreen,bg=colour232" #base01
 
 # window
-#BG #300a24
+#BG colour0=#300a24
 set-option -g window-style "fg=colour255,bg=colour232"
 set-option -g window-active-style "fg=colour255,bg=colour0"  #linux
 #set-option -g window-active-style "fg=colour255,bg=black"  #windows
