Vim binds for tmux yank. Tmux status bar upd. Demo user prompt.

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,18 +4,19 @@ set -g mouse off
 set-option -g history-limit 10000
 
 # default statusbar colors
-#set-option -g status-bg black #base02
-set-option -g status-style "fg=yellow,bg=colour236" #base02 #yellow
+set-option -g status-style "fg=yellow,bg=colour236"
+set-option -g status-right " \"#{?#{m:*#{host}*,#{pane_title}},#{pane_current_path},#{pane_title}}\" #[fg=brightgreen,bright]%H:%M %d-%b-%y"
+set-option -g status-right-length 100
 
 # default window title colors
-set-window-option -g window-status-style "fg=brightblue,bg=default" #base0
+set-window-option -g window-status-style "fg=brightblue,bg=default"
 
 # active window title colors
-set-window-option -g window-status-current-style "fg=brightred,bg=default" #orange
+set-window-option -g window-status-current-style "fg=brightred,bg=default"
 
 # pane border
-set-option -g pane-border-style "fg=brightgreen,bg=colour232" #base02
-set-option -g pane-active-border-style "fg=brightgreen,bg=colour232" #base01
+set-option -g pane-border-style "fg=brightgreen,bg=colour232"
+set-option -g pane-active-border-style "fg=brightgreen,bg=colour232"
 
 # window
 #BG colour0=#300a24
@@ -24,11 +25,11 @@ set-option -g window-active-style "fg=colour255,bg=colour0"  #linux
 #set-option -g window-active-style "fg=colour255,bg=black"  #windows
 
 # message text
-set-option -g message-style "fg=brightred,bg=black" #base02 #orange
+set-option -g message-style "fg=brightred,bg=black"
 
 # pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
+set-option -g display-panes-active-colour blue
+set-option -g display-panes-colour brightred
 
 # clock
 set-window-option -g clock-mode-colour green #green
@@ -42,7 +43,15 @@ set-option -g prefix C-a
 #set-option default-path "$PWD"
 set-option -g base-index 1
 
+set-option status-keys emacs
 setw -g mode-keys vi
+
+#bind-key -T copy-mode-vi 'v' send-keys -X rectangle-toggle   ## Default
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'R' send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel
+
+bind-key C-u copy-mode -u
 
 unbind-key C-b
 
