Correct status-keys config

--- a/tmux.conf
+++ b/tmux.conf
@@ -43,7 +43,7 @@ set-option -g prefix C-a
 #set-option default-path "$PWD"
 set-option -g base-index 1
 
-set-option status-keys emacs
+setw -g status-keys emacs
 setw -g mode-keys vi
 
 #bind-key -T copy-mode-vi 'v' send-keys -X rectangle-toggle   ## Default
