--- a/tmux.conf
+++ b/tmux.conf
@@ -2,9 +2,26 @@
 
 set -g mouse off
 set-option -g history-limit 10000
+set -g renumber-windows on
+
+## Default
+BG=colour232
+STATUSLINE_BG=colour236
+ACTIVE_PANE_BG=colour0
+PANE_BORDER_FG=brightgreen
+
+## Use below modified colorscheme (helps clarify remote vs local tmux)
+use_remote_colors=false
+
+%if #{==:#{use_remote_colors},true}
+    BG=colour235
+    STATUSLINE_BG=colour52
+    ACTIVE_PANE_BG=colour237
+    PANE_BORDER_FG=colour33
+%endif
 
 # default statusbar colors
-set-option -g status-style "fg=yellow,bg=colour236"
+set-option -g status-style "fg=yellow,bg=$STATUSLINE_BG"
 set-option -g status-right " \"#{?#{m:*#{host}*,#{pane_title}},#{pane_current_path},#{pane_title}}\" #[fg=brightgreen,bright]%H:%M %d-%b-%y"
 set-option -g status-right-length 100
 
@@ -15,13 +32,13 @@ set-window-option -g window-status-style "fg=brightblue,bg=default"
 set-window-option -g window-status-current-style "fg=brightred,bg=default"
 
 # pane border
-set-option -g pane-border-style "fg=brightgreen,bg=colour232"
-set-option -g pane-active-border-style "fg=brightgreen,bg=colour232"
+set-option -g pane-border-style "fg=$PANE_BORDER_FG,bg=$BG"
+set-option -g pane-active-border-style "fg=$PANE_BORDER_FG,bg=$BG"
 
 # window
 #BG colour0=#300a24
-set-option -g window-style "fg=colour255,bg=colour232"
-set-option -g window-active-style "fg=colour255,bg=colour0"  #linux
+set-option -g window-style "fg=colour255,bg=$BG"
+set-option -g window-active-style "fg=colour255,bg=$ACTIVE_PANE_BG"  #linux
 #set-option -g window-active-style "fg=colour255,bg=black"  #windows
 
 # message text
@@ -78,6 +95,7 @@ bind -r l select-pane -R
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind r source-file ~/.tmux.conf \; display "Reloaded!" #NOTE: This will not display errors
 
 set -g default-terminal "screen-256color"
 #set-option -g default-command bash
@@ -98,7 +116,12 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 run -b '~/.tmux/plugins/tpm/tpm'
 #set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 
-
+## Unset our local colormod variables
+setenv -g -r -u STATUSLINE_BG
+setenv -g -r -u BG
+setenv -g -r -u PANE_BORDER_FG
+setenv -g -r -u ACTIVE_PANE_BG
+setenv -g -r -u use_remote_colors
 
 ##### DARWIN / OSX
 
