Add more QoL commands

--- a/tmux.conf
+++ b/tmux.conf
@@ -96,6 +96,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf \; display "Reloaded!" #NOTE: This will not display errors
+bind p last-window
 
 set -g default-terminal "screen-256color"
 #set-option -g default-command bash
