More vim bindings and remote tmux prefix

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,8 @@ use_remote_colors=false
     STATUSLINE_BG=colour52
     ACTIVE_PANE_BG=colour237
     PANE_BORDER_FG=colour33
+    set-option -g prefix2 C-s
+    #set-option -g -u prefix2  ## to unset
 %endif
 
 # default statusbar colors
@@ -54,25 +56,22 @@ set-window-option -g clock-mode-colour green #green
 # bell
 #set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
-#My personal touch
 set-option -g prefix C-a
-#set-option -g prefix2 C-s
-#set-option default-path "$PWD"
 set-option -g base-index 1
+#set-option default-path "$PWD"
 
 setw -g status-keys emacs
 setw -g mode-keys vi
 
-#bind-key -T copy-mode-vi 'v' send-keys -X rectangle-toggle   ## Default
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection ## 'v' default is rectangle-toggle   
 bind-key -T copy-mode-vi 'R' send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel
 
 bind-key C-u copy-mode -u
 
-unbind-key C-b
-
+unbind-key C-b  ## default prefix
 bind-key C-a send-prefix
+
 bind-key X kill-pane
 bind-key -r S-Up resize-pane -U 3
 bind-key -r S-Down resize-pane -D 3
@@ -96,7 +95,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf \; display "Reloaded!" #NOTE: This will not display errors
-bind p last-window
+bind C-p last-window
 
 set -g default-terminal "screen-256color"
 #set-option -g default-command bash
