Add GPG configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -65,7 +65,10 @@ setw -g mode-keys vi
 
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection ## 'v' default is rectangle-toggle   
 bind-key -T copy-mode-vi 'R' send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel
+### Test if xclip installed and conditionally use one bind or the other
+if-shell -F '[ which xclip ]' \
+    'bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"' \
+    'bind-key -T copy-mode-vi "y" send-keys -X copy-selection-and-cancel'
 
 bind-key C-u copy-mode -u
 
