Add todo to cli and vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -70,6 +70,11 @@ if-shell -F '[ which xclip ]' \
     'bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"' \
     'bind-key -T copy-mode-vi "y" send-keys -X copy-selection-and-cancel'
 
+## No xclip but has pbcopy - Mac
+if-shell -F '[ ! which xclip ] && [ which pbcopy ]' \
+    'bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy" ' \
+    'bind-key -T copy-mode-vi "y" send-keys -X copy-selection-and-cancel'
+
 bind-key C-u copy-mode -u
 
 unbind-key C-b  ## default prefix
