Tmux updates, adjust bashp and setup.sh
Add secondary kubeconfig to merge multiple configs
Use github for setup script clone (gitlab not available when migrating)
Add tmux active pane border (helps with k9s)
Fix tmux cross-os copy to clipboard
Remove vimwiki for now

Changelog: added, fixed, changed

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,7 @@ BG=colour232
 STATUSLINE_BG=colour236
 ACTIVE_PANE_BG=colour0
 PANE_BORDER_FG=brightgreen
+ACTIVE_PANE_BORDER_FG=colour166
 
 ## Use below modified colorscheme (helps clarify remote vs local tmux)
 use_remote_colors=false
@@ -18,6 +19,7 @@ use_remote_colors=false
     STATUSLINE_BG=colour52
     ACTIVE_PANE_BG=colour237
     PANE_BORDER_FG=colour33
+    ACTIVE_PANE_BORDER_FG=colour226
     set-option -g prefix2 C-s
     #set-option -g -u prefix2  ## to unset
 %endif
@@ -35,7 +37,7 @@ set-window-option -g window-status-current-style "fg=brightred,bg=default"
 
 # pane border
 set-option -g pane-border-style "fg=$PANE_BORDER_FG,bg=$BG"
-set-option -g pane-active-border-style "fg=$PANE_BORDER_FG,bg=$BG"
+set-option -g pane-active-border-style "fg=$ACTIVE_PANE_BORDER_FG,bg=$BG"
 
 # window
 #BG colour0=#300a24
@@ -65,15 +67,17 @@ setw -g mode-keys vi
 
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection ## 'v' default is rectangle-toggle   
 bind-key -T copy-mode-vi 'R' send-keys -X rectangle-toggle
-### Test if xclip installed and conditionally use one bind or the other
-if-shell -F '[ which xclip ]' \
-    'bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"' \
-    'bind-key -T copy-mode-vi "y" send-keys -X copy-selection-and-cancel'
 
-## No xclip but has pbcopy - Mac
-if-shell -F '[ ! which xclip ] && [ which pbcopy ]' \
-    'bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy" ' \
-    'bind-key -T copy-mode-vi "y" send-keys -X copy-selection-and-cancel'
+## If we have xclip, also copy to clipboard using that (linux)
+if-shell -F '[ which xclip ]' {
+    'bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"'; \
+} {
+    ## Else if have pbcopy (macos), also copy to clipboard using that
+    ## Else just regular tmux copy to buffer (remote ssh, no clipboard)
+    if-shell -F '[ which pbcopy ]'; \
+        'bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy" '; \
+        'bind-key -T copy-mode-vi "y" send-keys -X copy-selection-and-cancel';
+}
 
 bind-key C-u copy-mode -u
 
