--- a/tmux.conf
+++ b/tmux.conf
@@ -69,14 +69,17 @@ bind-key -T copy-mode-vi 'v' send-keys -X begin-selection ## 'v' default is rect
 bind-key -T copy-mode-vi 'R' send-keys -X rectangle-toggle
 
 ## If we have xclip, also copy to clipboard using that (linux)
-if-shell -F '[ which xclip ]' \
-    'bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"'
+if-shell '[ $(which xclip) ]' {
+    bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+}
 ## Else if have pbcopy (macos), also copy to clipboard using that
-if-shell -F '[ which pbcopy ]' \
-    'bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy" '
+if-shell '[ $(which pbcopy) ]' {
+    bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy"
+}
 ## Else just regular tmux copy to buffer (remote ssh, no clipboard)
-if-shell -F '[ ! which pbcopy ] && [ ! which pbcopy ]' \
-    'bind-key -T copy-mode-vi "y" send-keys -X copy-selection-and-cancel'
+if-shell '[ ! $(which pbcopy) ] && [ ! $(which xclip) ]' {
+    bind-key -T copy-mode-vi "y" send-keys -X copy-selection-and-cancel
+}
 
 
 bind-key C-u copy-mode -u
